# pydf

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/pydf/: io.py  pdf.py
src/pydf/lha/: __init__.py  configuration.py  dump.py  info.py  io.py  parse.py  path.py  pdf.py  utils.py
src/pydf_cli/: configuration.py
tests/: test_pydf.py
