[tool.poetry]
name = "pydf"
version = "0.1.0"
description = "Python-native PDF interface"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
xarray = "^2022.3.0"
PyYAML = { version = "^6.0", optional = true }
lhapdf-management = { version = "^0.3", optional = true }

[tool.poetry.dev-dependencies]


[tool.poetry.extras]
lha = ["PyYAML", "lhapdf-management"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
