[tool.poetry]
name = "pydf"
version = "0.1.0"
description = "Python-native PDF interface"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.4"
xarray = "^2022.3.0"
netCDF4 = "^1.5.8"
scipy = "^1.8.1"
PyYAML = { version = "^6.0.0", optional = true }
pandas = { version = "^1.4.2", optional = true }

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pdbpp = "^0.10.3"
Sphinx = "^5.0.2"


[tool.poetry.extras]
lha = ["PyYAML", "pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
